# ai_tutorial

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  PROJECT_DOCUMENT.md  Possible_Improvements.md  QUICKSTART_FLYIO.md  README.md  docker-compose.dev.yml  docker-compose.yml  fly.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy-flyio.yml
content/: labs-enhanced.md
content/advanced-llm/: attention-mechanisms.md  model-architectures.md  moe-models.md  multimodal-lab.md  multimodal-llms.md
content/advanced-topics/: content-filtering.md  cost-optimization-lab.md  custom-logging-tracing.md  function-calling-practices.md  json-mode-schemas.md  langsmith-observability.md  model-routing.md  observability-lab.md  output-validation.md  phoenix-arize-monitoring.md  prompt-compression.md  prompt-injection-prevention.md  pydantic-integration.md  safety-guardrails-lab.md  semantic-caching.md  structured-outputs-lab.md
content/agents/: agent-architectures.md  agent-components.md  agent-loop.md  code-agents.md  code-assistant-lab.md  function-calling.md  memory-state.md  multi-tool-agents.md  observation-thought-action.md  react-agent-lab.md  research-agent-lab.md  tool-execution.md  (+4 more)
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  FLYIO_CONFIG.md
scripts/: deploy-flyio.ps1  deploy-flyio.sh  deploy.ps1  deploy.sh
static/: manifest.json  offline.html  sw.js
templates/: base.html
tests/: __init__.py  conftest.py  test_content_registry.py  test_export.py  test_providers.py  test_routes.py
(+162 files in other folders)
